examples/manifests/deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example2
spec:
  replicas: 6
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
